basic posting and user auth with facebook

--- a/app/views/posts.html
+++ b/app/views/posts.html
@@ -1,11 +1,4 @@
-<form ng-submit="submitPost()">
-  <input type="text" ng-model="post.url" />
-  <input type="date" ng-model="post.date" />
-  <input type="text" ng-model="post.star" />
-  <input type="text" ng-model="post.category" />
-  <input type="submit" value="Add Post" />
-</form>
-
-<div ng-repeat="(postId, post) in posts"></div>
-  <a href="{{ post.url }}">{{ post.url }}</a>
+<div ng-repeat="(postId, post) in posts">
+  {{ post.date | date:'yyyy-MM-dd' }} | {{ post.category }} | {{ post.star }} | <a href="{{ post.url }}">Read Now</a>
+  | <a ng-click="deletePost(postId)">delete</a>
 </div>
